# Abil

./: .gitignore  LISCENCE  README.md  README.rmd  conf.py  environment.yml  functions.py  index.rst  model_config.yml  plotting.py  plotting_stats.ipynb  post.ipynb  post.py  post_cluster.py  predict.ipynb  predict.py  pyproject.toml  requirements.txt  to-bp-no-env.sh  to-bp.sh  training.csv  tune.ipynb  tune.py
abil/: ConformityScores.py  RF_trees.py  __init__.py  analyze.py  functions.py  log_grid_search.py  post.py  pre.py  predict.py  test.py  tune.py  unified_tree_or_bag.py  utils.py  zero_stratified_kfold.py  zir.py
cluster_example/: README.md  hpc_post.py  hpc_predict.py  hpc_tune.py  predict.sh  tune_KNN.sh  tune_RF.sh  tune_XGB.sh
cluster_example_emma/: tune_RF.py  tune_RF.sh
configuration/: 1-phase_rf.yml  1-phase_rf_config.yml  2-phase.yml  2-phase_ensemble.yml  2-phase_ensemble_cluster.yml  classifier_test.yml  devries2023_model_config.yml  devries2032_cluster_model_config.yml  ensemble.yml  ensemble_2-phase.yml  ensemble_classifier.yml  ensemble_regressor.yml  ensemble_regressor_cluster.yml  example_Emma.yml  example_Emma_cluster.yml  example_model_config.yml  mlp_regressor.yml  regressor.yml  regressor_test.yml  rf_classifier.yml  rf_regressor.yml
data/: abundances_environment.csv  training.csv  traits.csv
deVries2023/: devries2023.ipynb
devries2024/: 2-phase.yml  ensemble_regressor_deVries2024.yml  hpc_post.py  hpc_predict.py  hpc_tune.py  post.sh  pre.py  predict.sh  tune_KNN.sh  tune_RF.sh  tune_XGB.sh
docs/: 2-phase-ensemble.rst  classifier-ensemble.rst  conf.py  configuration.rst  contributing.rst  example.rst  examples.rst  getting_started.md  hpc.rst  index.rst  install-instructions.rst  installation.rst  mapie.rst  one-phase-ensemble.rst  post.rst  quick-start.rst  regressor-ensemble.rst  two-phase-ensemble.rst  yaml-config.rst
functions/: functions.py  plotting.py  post.py  predict.py  tune.py
paper/: figure_1.py  (+2 more)
(+228 files in other folders)
