[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abil"
version = "0.0.8"
authors = [
  { name="nanophyto", email="joost.devries@bristol.ac.uk" },
]

description = "Aquatic Biogeochemical Interpolation Library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nanophyto/planktonSDM"

[tool.hatch.build]
exclude = [
  "/.git",
  "/singularity",
  "/devries2024/data",
]



