[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abil"
version = "25.04.14"
license = "MIT"
license-files = ['LICENSE']
description = "Aquatic Biogeochemical Interpolation Library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nanophyto/Abil"

[tool.hatch.build]
exclude = [
  "/.git",
  "/studies",
  "/dist",
]



